@@ -1059,18 +1059,16 @@ void CollapseWindow(void)
 	{
 		wrect.right = (wrect.right - ((wrect.right-wrect.left)/2));
 		MemWCollapsed = true;
-		SetDlgItemText(hwndMemWatch, MEMW_EXPANDCOLLAPSE, ">"); //Put Address value
+		SetDlgItemText(hwndMemWatch, MEMW_EXPANDCOLLAPSE, ">");
 		ChangeMemwMenuItemText(MEMW_OPTIONS_EXPANDCOLLAPSE, "&Expand to 2 columns");
 	}
-	else
+	else									//Else expand it
 	{
 		wrect.right = (wrect.right + (wrect.right-wrect.left));
 		MemWCollapsed = false;
-		SetDlgItemText(hwndMemWatch, MEMW_EXPANDCOLLAPSE, "<"); //Put Address value
+		SetDlgItemText(hwndMemWatch, MEMW_EXPANDCOLLAPSE, "<");
 		ChangeMemwMenuItemText(MEMW_OPTIONS_EXPANDCOLLAPSE, "&Collapse to 1 column");
 	}
 	
-	SetWindowPos(hwndMemWatch,NULL,MemWatch_wndx,MemWatch_wndy,(wrect.right-wrect.left),(wrect.bottom-wrect.top),NULL);
-	
-	
+	SetWindowPos(hwndMemWatch,NULL,MemWatch_wndx,MemWatch_wndy,(wrect.right-wrect.left),(wrect.bottom-wrect.top),NULL);	
 }
